# live-bootcamp-project

./: compose.dev.yml  compose.override.yml  compose.yml
.github/workflows/: prod.yml
app-service/: .dockerignore  Dockerfile
auth-service/: Cargo.toml
auth-service-workspace/: Cargo.toml  Dockerfile  Dockerfile.dev
auth-service-workspace/auth-service/: .dockerignore  Cargo.toml
auth-service-workspace/auth-service-core/: Cargo.toml  define_constants.sh
auth-service-workspace/auth-service-core/src/: lib.rs
auth-service-workspace/auth-service-core/src/auth/: constants.rs  mod.rs
auth-service-workspace/auth-service/src/: lib.rs  main.rs
auth-service-workspace/auth-service/src/app_state/: mod.rs
auth-service-workspace/auth-service/src/domain/: mod.rs  user.rs
auth-service-workspace/auth-service/src/domain/data_stores/: banned_token_store.rs  mod.rs
auth-service-workspace/auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_token.rs
auth-service-workspace/auth-service/src/services/user_store/: hash_map_user_store.rs  mod.rs  temporary_banned_token_store.rs  temporary_user_store.rs
auth-service-workspace/auth-service/src/utilities/: constants.rs
auth-service-workspace/auth-service/tests/api/: login.rs  logout.rs  main.rs  signup.rs  utilities.rs  verify_2fa.rs  verify_token.rs
auth-service/src/: lib.rs
auth-service/tests/api/: login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  utilities.rs  verify_2fa.rs  verify_token.rs
proxy-service/: Cargo.toml  Dockerfile
proxy-service/src/: main.rs
(+12 files in other folders)
