[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-service-core = { path = "../auth-service-core" }
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.4", features = ["macros"] }
thiserror = "2.0.15"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
reqwest = "0.12.23"

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "cookies",
] }
